Atempt to fix header overflow

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Mono);
-
 body {
     background-color: #444444;
     margin: 16px;
@@ -58,7 +56,8 @@ a#current-info-link {
 }
 
 #container {
-	background-color: #eeeeee;
+    
+background-color: #eeeeee;
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
@@ -71,7 +70,7 @@ a#current-info-link {
 .section-heading {
     font-family: "Ubuntu Mono", Consolas, monospace;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 28px;
     border-bottom: 1px solid #cccccc;
 }
 
@@ -83,4 +82,9 @@ a#current-info-link {
 
 .clear {
     clear: both;
+}
+
+#disclaimer {
+    font-size: 8pt;
+    line-height: 115%;
 }
